--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,12 @@ body{
     overflow-x:hidden;
 }
 
+.card-footer-1> div >h5{
+    font-family: Roboto;
+    color:  #FABE4C;
+
+
+}
 /* header part */
 .header{
     background-color: #FFFBF0;
@@ -55,7 +61,7 @@ color:#3E3E3E;
 
 }
 
-.banner-title-para-button a{
+.banner-title-para-button a,.my-button{
     /* width: 170px;
     height: 60px; */
     background: linear-gradient(180deg, #A4BC46 0%, #85A019 100%);
@@ -72,6 +78,43 @@ color:#3E3E3E;
 }
 
 
+
+/* women section */
+
+.my-card {
+width:100%;
+height: auto;
+background: #FFFFFF;
+box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.05);
+border-radius: 20px;
+}
+.content-img{
+   
+    background-color: #F1F1F1;
+    border-radius: 20px;
+    ;
+}
+.card-title{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+    
+    color: #363958;
+}
+
+.card-text{
+font-family: Roboto;
+font-style: normal;
+font-weight: normal;
+font-size: 16px;
+line-height: 26px;
+/* or 162% */
+
+
+color: #3E3E3E;
+}
 
 
 
